# SCW-SMA_Server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Analyzer/: CMakeLists.txt  config.json  main.cpp
Analyzer/include/: algorithm.h  analyzer.h  argparse.hpp  config.h  executor.h  log.h  scheduler.h  server.h  stream.h  utils.h
Analyzer/src/: algorithm.cpp  analyzer.cpp  config.cpp  executor.cpp  log.cpp  scheduler.cpp  server.cpp  stream.cpp
