################################################################################
# CMake 基本设置
################################################################################

cmake_minimum_required(VERSION 3.12)

# 设置 C++ 标准
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# 编译器标志
message("${COMPILE_LANG_AND_ID} Compiler in use")
# 构建类型
message("${CMAKE_BUILD_TYPE} build type in use")
# 编译平台名称
message("${CMAKE_SYSTEM_PROCESSOR} architecture in use")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin) # 存档文件（静态库）输出目录
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin) # 库文件（共享库/动态库）输出目录
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin) # 可执行文件输出目录


################################################################################
# 导入要使用的模块配置
################################################################################

include(InstallRequiredSystemLibraries) # 包含 InstallRequiredSystemLibraries 模块, 用于包含当前平台项目所需的任何运行时库
include(CPack) # 包含 CPack 模块, 用于打包程序

################################################################################
# 变量初始化
################################################################################

################################################################################
# 全局函数配置
################################################################################

################################################################################
# 项目设置
################################################################################
project(StreamMediaAnalysisServer VERSION 1.0.0 LANGUAGES CXX)
# 定义项目的主要版本号和次要版本号
set(Project_VERSION_MAJOR 1)
set(Project_VERSION_MINOR 0)

################################################################################
# 注入宏定义
################################################################################
if(WIN32)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
  # add_compile_options(/source-charset:utf-8 /execution-charset:utf-8)
endif()

################################################################################
# 子项目设置
################################################################################

# add_subdirectory(Test)
add_subdirectory(Analyzer)
add_subdirectory(AlgorithmManage)

################################################################################
# 头文件库设置
################################################################################

################################################################################
# 依赖库设置
################################################################################


################################################################################
# 文件预处理
################################################################################

################################################################################
# 打包规则
################################################################################

# ################################################################################
# # 安装规则
# ################################################################################
